<resources>
    <string name="app_name">Happy Places App</string>
    <string name="sign_in_message">Sign in to your account</string>
    <string name="email_placeholder">Email</string>
    <string name="username">Username</string>
    <string name="password_placeholder">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="new_account">Don\'t have an account?</string>
    <string name="already_account">Already registered?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_new_account">Create new account</string>
    <string name="retype_password_placeholder_placeholder">Retype Your Password</string>
    <string name="log_out">Log Out</string>
    <string name="type_password_placeholder">Type Your Password</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="settings">Settings</string>
    <string name="about_text">Welcome to Happy Places App!
        <br /><br /> \n \n If you ever wish to find new places to explore you got to right place. Happy Places App is made for users to share their most loved places.
        <br /><br /> \n \n Do you went to a nice place? Share your travel experience with us at myapp@happyplaces.com or add your location in app directly.
    </string>
    <string name="contact_text">Contact us!
        <br /><br /> \n \n If you have any question don\'t hesitate to contact us through any of the following:
        <br /><br /> \n \n Mail: myapp@happyplaces.com
        <br /><br /> \n \n Facebook: Happy Places
        <br /><br /> \n \n Instagram: @happy_places
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello User</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="messages_header">Messages header</string>
    <string name="signature_title">Signature title</string>
    <string name="reply_title">reply title</string>
    <string name="sync_header">Sync header</string>
    <string name="sync_title">Sync title</string>
    <string name="attachment_summary_off">Summary off</string>
    <string name="attachment_summary_on">Summary on</string>
    <string name="attachment_title">Attachment title</string>
</resources>