<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/aboutFragment"
        android:icon="@drawable/about_ic"
        android:title="@string/about"
        app:showAsAction="never"/>
    <item
        android:id="@+id/contactFragment"
        android:icon="@drawable/contact_ic"
        android:title="@string/contact"
        app:showAsAction="never"/>

    <item
        android:id="@+id/redirect_sign_in"
        android:title="@string/sign_in"
        app:showAsAction="never"/>
<!--    <item-->
<!--        android:id="@+id/settingsFragment"-->
<!--        android:icon="@drawable/settings_icon"-->
<!--        android:title="@string/settings" />-->
</menu>